# vkm

./: .clang-format  CMakeLists.txt  DESIGN.md  LICENSE.md
.claude/: settings.json
examples/: usage.cpp
include/vkm/: common.hpp  matrix.hpp  pack.hpp  quaternion.hpp  transform.hpp  vector.hpp  vkm.hpp
include/vkm/detail/: layout.hpp  simd.hpp
tests/: test_common.cpp  test_inverse.cpp  test_layout.cpp  test_matrix.cpp  test_methods.cpp  test_pack.cpp  test_quat_ops.cpp  test_transform.cpp  test_vector.cpp  test_vector_ops.cpp
